--- a/src/OnlinePosts/GetOnline.css
+++ b/src/OnlinePosts/GetOnline.css
@@ -1,3 +1,27 @@
 th, td{
     padding: 20px;
 }
+
+h1{
+    text-align: start;
+    color: #fa7128;
+    padding-left : 50px;
+}
+
+h2{
+    text-align: left;
+    color: #fa7128;
+    padding-left : 50px;
+}
+
+#abc{
+    text-align: start;
+    background-color: #fa7128;
+    width: 100%;
+    height: 5px;
+}
+
+table{
+    margin-left:auto;
+    margin-right:auto;
+}
