--- a/src/OnlinePosts/GetOnline.css
+++ b/src/OnlinePosts/GetOnline.css
@@ -3,25 +3,78 @@ th, td{
 }
 
 h1{
-    text-align: start;
     color: #fa7128;
     padding-left : 50px;
+    padding-bottom: 0px;
 }
 
 h2{
-    text-align: left;
-    color: #fa7128;
     padding-left : 50px;
+    padding-bottom: 0px;
 }
 
 #abc{
     text-align: start;
     background-color: #fa7128;
-    width: 100%;
     height: 5px;
 }
 
 table{
     margin-left:auto;
     margin-right:auto;
+}
+
+.addB{
+    background-color: #fa7128;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font: bold;
+    position: absolute;
+    left: 56px;
+    top: 200px;
+}
+
+.updateB{
+    background-color: #fa7128;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding-left: 33px;
+    padding-right: 33px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font: bold;
+    position: absolute;
+    left: 1150px;
+}
+
+.cross{
+    border: none;
+    background-color: white;
+}
+
+.gray1{
+    background-color: #F0F0F0;
+    padding-top:48px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+.white2{
+    background-color: white;
+    width:1130px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding:56px;
+    display: inline-block;
+    border-radius: 4px;
+}
+
+.p{
+    padding:0px;
 }
