--- a/src/OnlinePosts/GetOnline.css
+++ b/src/OnlinePosts/GetOnline.css
@@ -22,6 +22,12 @@ h2{
 table{
     margin-left:auto;
     margin-right:auto;
+    padding:10px;
+}
+
+#tabhead{
+    padding-left: 60px;
+    padding-right: 60px;
 }
 
 .addB{
@@ -29,14 +35,15 @@ table{
     color: white;
     border: none;
     border-radius: 4px;
-    padding-left: 20px;
+    padding: 10px;
+    /* padding-left: 20px;
     padding-right: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
     font: bold;
     position: absolute;
     left: 56px;
-    top: 200px;
+    top: 200px; */
 }
 
 .updateB{
@@ -44,13 +51,15 @@ table{
     color: white;
     border: none;
     border-radius: 4px;
-    padding-left: 33px;
+    padding: 10px;
+    /* padding-left: 33px;
     padding-right: 33px;
     padding-top: 10px;
     padding-bottom: 10px;
     font: bold;
     position: absolute;
-    left: 1150px;
+    top: 770px;
+    left: 1000px; */
 }
 
 .cross{
@@ -61,7 +70,7 @@ table{
 .gray1{
     background-color: #F0F0F0;
     padding-top:48px;
-    padding-bottom: 10px;
+    padding-bottom: 222px;
     text-align: center;
 }
 
