--- a/src/OnlinePosts/GetOnline.css
+++ b/src/OnlinePosts/GetOnline.css
@@ -19,6 +19,12 @@ h2{
     height: 5px;
 }
 
+.topOne{
+    margin-left:auto;
+    margin-right:auto;
+    padding:10px;
+}
+
 table{
     margin-left:auto;
     margin-right:auto;
@@ -36,14 +42,6 @@ table{
     border: none;
     border-radius: 4px;
     padding: 10px;
-    /* padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font: bold;
-    position: absolute;
-    left: 56px;
-    top: 200px; */
 }
 
 .updateB{
@@ -52,19 +50,12 @@ table{
     border: none;
     border-radius: 4px;
     padding: 10px;
-    /* padding-left: 33px;
-    padding-right: 33px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font: bold;
-    position: absolute;
-    top: 770px;
-    left: 1000px; */
 }
 
 .cross{
     border: none;
     background-color: white;
+    color: black;
 }
 
 .gray1{
@@ -86,4 +77,12 @@ table{
 
 .p{
     padding:0px;
+}
+
+.getD{
+    background-color: #fa7128;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 10px;
 }
